--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: svxlink
 Section: hamradio
 Priority: optional
-Maintainer: Felix Lechner <felix.lechner@gmail.com>
+Maintainer: Felix Lechner <felix.lechner@lease-up.com>
 Build-Depends-Indep: librsvg2-bin
 Build-Depends: debhelper (>= 10), cmake,
  libsigc++-2.0-dev (>= 2.2.10-0.2), libpopt-dev, libgcrypt20-dev,
