Placed libs in Section: libs

--- a/debian/control
+++ b/debian/control
@@ -99,6 +99,7 @@ Description: Icons for graphical client for the EchoLink® protocol
 Package: libasynccpp1.4
 Architecture: any
 Multi-Arch: same
+Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: AsyncCpp library for SvxLink
  The SvxLink server provides access to a ham radio transceiver via
@@ -137,6 +138,7 @@ Description: AsyncCpp library for SvxLink (development files)
 Package: libasyncaudio1.4
 Architecture: any
 Multi-Arch: same
+Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: AsyncAudio library for SvxLink
  The SvxLink server provides access to a ham radio transceiver via
@@ -175,6 +177,7 @@ Description: AsyncAudio library for SvxLink (development files)
 Package: libecholib1.3
 Architecture: any
 Multi-Arch: same
+Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: EchoLib library for SvxLink
  The SvxLink server provides access to a ham radio transceiver via
@@ -213,6 +216,7 @@ Description: EchoLib library for SvxLink (development files)
 Package: libasyncqt1.4
 Architecture: any
 Multi-Arch: same
+Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: AsyncQt library for SvxLink
  The SvxLink server provides access to a ham radio transceiver via
@@ -252,6 +256,7 @@ Description: AsyncQt library for SvxLink (development files)
 Package: libasynccore1.4
 Architecture: any
 Multi-Arch: same
+Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: AsyncCore library for SvxLink
  The SvxLink server provides access to a ham radio transceiver via
