manually create subdirectories for generated graphics

--- a/debian/rules
+++ b/debian/rules
@@ -22,8 +22,11 @@ export QT_SELECT=qt5
 
 .PHONY: override_dh_auto_build-indep
 override_dh_auto_build-indep:
+	mkdir -p $(CURDIR)/debian/icons/generated/64x64/
 	rsvg-convert --width 64 --keep-aspect-ratio $(CURDIR)/debian/icons/original/Transmission-3-edited-recolored.svg > $(CURDIR)/debian/icons/generated/64x64/qtel.png
+	mkdir -p $(CURDIR)/debian/icons/generated/128x128/
 	rsvg-convert --width 128 --keep-aspect-ratio $(CURDIR)/debian/icons/original/Transmission-3-edited-recolored.svg > $(CURDIR)/debian/icons/generated/128x128/qtel.png
+	mkdir -p $(CURDIR)/debian/icons/generated/256x256/
 	rsvg-convert --width 256 --keep-aspect-ratio $(CURDIR)/debian/icons/original/Transmission-3-edited-recolored.svg > $(CURDIR)/debian/icons/generated/256x256/qtel.png
 	dh_auto_build --indep
 
