--- a/debian/rules
+++ b/debian/rules
@@ -61,6 +61,7 @@ override_dh_installchangelogs:
 	dh_installchangelogs -psvxlink-server src/svxlink/ChangeLog
 	dh_installchangelogs -psvxreflector src/svxlink/ChangeLog
 	dh_installchangelogs -premotetrx src/svxlink/ChangeLog
+	dh_installchangelogs -psvxlink-gpio src/svxlink/ChangeLog
 	dh_installchangelogs -pqtel src/qtel/ChangeLog
 	dh_installchangelogs -pqtel-icons src/qtel/ChangeLog
 	dh_installchangelogs -plibecholib1.3 src/echolib/ChangeLog
