--- a/debian/svxreflector.service
+++ b/debian/svxreflector.service
@@ -2,7 +2,7 @@
 
 [Unit]
 Description=SvxLink Reflector server software
-After=network.target remote-fs.target syslog.target time.target
+After=network.target remote-fs.target time.target
 
 [Service]
 [Service]
