--- a/debian/svxreflector.service
+++ b/debian/svxreflector.service
@@ -2,6 +2,7 @@
 
 [Unit]
 Description=SvxLink Reflector server software
+Documentation=man:svxreflector(1)
 After=network.target remote-fs.target time.target
 
 [Service]
