--- a/debian/rules
+++ b/debian/rules
@@ -23,7 +23,11 @@ export QT_SELECT=qt5
 .PHONY: override_dh_auto_configure
 override_dh_auto_configure:
 	dh_auto_configure -- \
-		-DWITH_SYSTEMD=ON
+		-DCMAKE_VERBOSE_MAKEFILE=ON \
+		-DWITH_SYSTEMD=ON \
+		-DBUILD_STATIC_LIBS=ON \
+		-DSYSCONF_INSTALL_DIR=/etc \
+		-DLOCAL_STATE_DIR=/var
 
 .PHONY: override_dh_auto_build-indep
 override_dh_auto_build-indep:
